For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

*******************************************************************************
2.4.7

2003-10-14    <layer@HOBART>

	* fi-indent.el (fi::calculate-lisp-indent): rfe4814: do nicer
	  indentation when element after opening paren is #+/#- pair

*******************************************************************************
2.4.6

2003-10-14    <layer@HOBART>

	* fi-basic-lep.el,
	* fi-changes.el,
	* fi-dmode.el,
	* fi-lep.el,
	* fi-modes.el,
	* fi-utils.el: rfe2463: handle multiple in-package's in a file.
	  This was done by using a function fi::package that either
	  returns fi:package, if multiple in-package's were not detected
	  at file read time, or the actual package backward from the
	  point, if there were multiple in-package's at file read time.

*******************************************************************************
2.4.5

2003-10-14    <layer@HOBART>

	* fi-lep.el: rfe4040: handle binary modes by not using the
	  fi::cl-file-position-to-point hack in this case
	* fi-modes.el: rfe4251: same treatment for other modes
	* fi-emacs21.el: rfe5597: resizing a frame causes the pretty
	  printer to notice the change
	* fi-subproc.el (fi:user-env-vars): rfe4337: new variable
	  fi:user-env-vars
	* fi-subproc.el (fi::read-file-name): bug9125: fix long standing
	  annoyance of bogus dxl input in minibuffer
	* fi-subproc.el (fi::set-environment-use-process-environment):
	  bug8802: avoid SHELL as set by Emacs on NT/2k, since it doesn't
	  work well with run-shell-command

*******************************************************************************
2.4.4

2003-10-13  Kevin Layer  <layer@crikey>

	* fi-lze.el: rfe5674: for print correct file position in eli