@@ -7,6 +7,10 @@ For more detailed instructions on filling in the ChangeLog form, see
 	* <changes go here...>
 
 *******************************************************************************
+join from acl62 to trunk on 12/11/03
+next join tag: acl62_to_trunk_via_layer48_merge_121003
+
+*******************************************************************************
 2.4.7
 
 2003-10-14    <layer@HOBART>
